Fixed Overlapping

--- a/src/styles/burger-menu-animation.css
+++ b/src/styles/burger-menu-animation.css
@@ -18,14 +18,21 @@
 .preview-slide {
   position: fixed;
   inset: 0;
+  top: 0;
+  background: inherit;
+  height: 100%;
+  z-index: 100;
+  transition: transform 500ms ease-in-out, opacity 500ms ease-in-out;
+  opacity: 0;
   transform: translateY(100%);
-  transition: transform 0.3s ease-out;
-  z-index: 50;
-  display: flex;
-  flex-direction: column;
-  background-color: inherit;
 }
 
 .preview-slide.show {
+  opacity: 1;
   transform: translateY(0);
+}
+
+.preview-slide.exit {
+  opacity: 0;
+  transform: translateY(100%);
 }
